Add current game result show

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="menu">Menu</string>
     <string name="simple_game">Simple game</string>
     <string name="game_results">Game results</string>
+    <string name="incorrect">Didn\'t guess! Remaining attempts: </string>
+    <string name="you_won">You won!</string>
+    <string name="you_lost">You lost :(</string>
 </resources>
