Add hidden thought number to main screen

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -16,4 +16,5 @@
     <string name="incorrect">Не вгадали! Залишилось спроб:&#160;</string>
     <string name="you_won">Ви перемогли!</string>
     <string name="you_lost">You lost :(</string>
+    <string name="the_hidden_number_was">Загадане число було:&#160;</string>
 </resources>
